@@ -1431,7 +1431,7 @@ check_selected: for(int i = 0; i < selectedFiles.length; i++)
 					// them, otherwise add current directory
 					ArrayList toAdd = new ArrayList();
 					VFS.DirectoryEntry[] selected = getSelectedFiles();
-					if(selected == null)
+					if(selected == null || selected.length == 0)
 					{
 						if(path.equals(FavoritesVFS.PROTOCOL + ":"))
 						{
