@@ -30,6 +30,7 @@ import java.awt.Component;
 import java.lang.reflect.*;
 import java.io.File;
 import java.util.LinkedList;
+import org.gjt.sp.jedit.MiscUtilities;
 import org.gjt.sp.jedit.OperatingSystem;
 import org.gjt.sp.util.Log;
 //}}}
@@ -46,9 +47,8 @@ public class FileRootsVFS extends VFS
 	//{{{ FileRootsVFS constructor
 	public FileRootsVFS()
 	{
-		// BROWSE_CAP not set because we don't want the VFS browser
-		// to create an item for this VFS in its 'Plugins' menu
-		super("roots",LOW_LATENCY_CAP);
+		super("roots",LOW_LATENCY_CAP,new String[] {
+			EA_TYPE });
 
 		// JDK 1.4 adds methods to obtain a drive letter label and
 		// list the desktop on Windows
@@ -95,7 +95,7 @@ public class FileRootsVFS extends VFS
 		for(int i = 0; i < roots.length; i++)
 		{
 			String name = roots[i].getPath();
-			rootDE[i] = _getDirectoryEntry(session,name,comp);
+			rootDE[i] = new RootsEntry(roots[i]);
 		}
 
 		return rootDE;
@@ -107,84 +107,7 @@ public class FileRootsVFS extends VFS
 	{
 		File file = new File(path);
 
-		int type;
-
-		boolean isFloppy;
-		boolean isDirectory;
-
-		// to prevent windows looking for a disk in the floppy drive
-		if(isFloppyDrive != null)
-		{
-			try
-			{
-				isFloppy = Boolean.TRUE.equals(isFloppyDrive.
-					invoke(fsView, new Object[] { file }));
-			}
-			catch(Exception e)
-			{
-				isFloppy = false;
-			}
-		}
-		else
-			isFloppy = path.startsWith("A:") || path.startsWith("B:");
-
-		// so an empty cd drive is not reported as a file
-		if(isDrive != null)
-		{
-			try
-			{
-				isDirectory = Boolean.TRUE.equals(isDrive.
-					invoke(fsView, new Object[] { file }))
-					|| file.isDirectory();
-			}
-			catch(Exception e)
-			{
-				isDirectory = file.isDirectory();
-			}
-		}
-		else
-			isDirectory = file.isDirectory();
-
-		if(isFloppy || isDirectory)
-		{
-			type = VFS.DirectoryEntry.FILESYSTEM;
-
-			if(isFileSystemRoot != null)
-			{
-				try
-				{
-					if(Boolean.FALSE.equals(isFileSystemRoot
-						.invoke(fsView,new Object[] { file })))
-					{
-						type = VFS.DirectoryEntry.DIRECTORY;
-					}
-				}
-				catch(Exception e) {}
-			}
-		}
-		else
-			type = VFS.DirectoryEntry.FILE;
-
-		String name;
-
-		if(getSystemDisplayName != null && !isFloppy)
-		{
-			try
-			{
-				name = path + " " + (String)getSystemDisplayName
-					.invoke(fsView,new Object[] { file });
-			}
-			catch(Exception e)
-			{
-				name = path;
-			}
-		}
-		else if(OperatingSystem.isMacOS())
-			name = getFileName(path);
-		else
-			name = path;
-
-		return new VFS.DirectoryEntry(name,path,path,type,0L,false);
+		return new RootsEntry(file);
 	} //}}}
 
 	//{{{ Private members
@@ -245,4 +168,98 @@ public class FileRootsVFS extends VFS
 	} //}}}
 
 	//}}}
+
+	//{{{ RootsEntry class
+	static class RootsEntry extends VFS.DirectoryEntry
+	{
+		RootsEntry(File file)
+		{
+			this.path = file.getPath();
+
+			boolean isFloppy;
+			boolean isDirectory;
+
+			// to prevent windows looking for a disk in the floppy drive
+			if(isFloppyDrive != null)
+			{
+				try
+				{
+					isFloppy = Boolean.TRUE.equals(isFloppyDrive.
+						invoke(fsView, new Object[] { file }));
+				}
+				catch(Exception e)
+				{
+					isFloppy = false;
+				}
+			}
+			else
+				isFloppy = path.startsWith("A:") || path.startsWith("B:");
+
+			// so an empty cd drive is not reported as a file
+			if(isDrive != null)
+			{
+				try
+				{
+					isDirectory = Boolean.TRUE.equals(isDrive.
+						invoke(fsView, new Object[] { file }))
+						|| file.isDirectory();
+				}
+				catch(Exception e)
+				{
+					isDirectory = file.isDirectory();
+				}
+			}
+			else
+				isDirectory = file.isDirectory();
+
+			if(isFloppy || isDirectory)
+			{
+				type = VFS.DirectoryEntry.FILESYSTEM;
+
+				if(isFileSystemRoot != null)
+				{
+					try
+					{
+						if(Boolean.FALSE.equals(isFileSystemRoot
+							.invoke(fsView,new Object[] { file })))
+						{
+							type = VFS.DirectoryEntry.DIRECTORY;
+						}
+					}
+					catch(Exception e) {}
+				}
+			}
+			else
+				type = VFS.DirectoryEntry.FILE;
+
+			if(getSystemDisplayName != null && !isFloppy)
+			{
+				try
+				{
+					name = path + " " + (String)getSystemDisplayName
+						.invoke(fsView,new Object[] { file });
+				}
+				catch(Exception e)
+				{
+					name = path;
+				}
+			}
+			else if(OperatingSystem.isMacOS())
+				name = MiscUtilities.getFileName(path);
+			else
+				name = path;
+		}
+
+		public String getExtendedAttribute(String name)
+		{
+			if(name.equals(EA_TYPE))
+				return super.getExtendedAttribute(name);
+			else
+			{
+				// don't want it to show "0 bytes" for size,
+				// etc.
+				return null;
+			}
+		}
+	} //}}}
 }
